--- a/source/index.html
+++ b/source/index.html
@@ -45,8 +45,7 @@
 
     <div class="main-logo">
       <h2 class="visually-hidden">О Седоне</h2>
-      <img class="main-logo__image" src="../source/img/logo-welcome.svg" width="282" height="214"
-        alt="Добро пожаловать в Седону.">
+      <img class="main-logo__image" src="../source/img/logo-welcome.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
     </div>
 
     <section class="promo">
@@ -60,31 +59,31 @@
       <div class="advantages__wrapper">
         <h2 class="visually-hidden">Преимущества</h2>
         <ol class="advantages__list">
-          <li class="advantages__item">
-            <h3 class="advantages__title">Настоящий городок</h3>
-            <span class="advantages__number">— №1 —</span>
-            <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <li class="advantages__item advantages__item--background">
+            <h3 class="advantages__title advantages__title--accent">Настоящий городок</h3>
+            <span class="advantages__number advantages__number--accent">— №1 —</span>
+            <p class="advantages__description advantages__description-accent">Седона не аттракцион для туристов, там течет своя жизнь</p>
             <img class="advantages__image" src="../source/img/advantages-1.jpg" width="320" height="260"
               alt="Улица в городке Седона.">
-            <ul class="advantages__list">
-              <li class="advantages__item">
+            <ul class="advantages__list advantages__list--background">
+              <li class="advantages__item advantages__item--house">
                 <h4 class="advantages__title">Жилье</h4>
                 <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
-              <li class="advantages__item">
+              <li class="advantages__item advantages__item--food">
                 <h4 class="advantages__title">Еда</h4>
                 <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
-              <li class="advantages__item">
+              <li class="advantages__item advantages__item--souvenir">
                 <h4 class="advantages__title">Сувениры</h4>
                 <p class="advantages__description">Не только китайского, но и местного производства!</p>
               </li>
             </ul>
           </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Там есть мост дьявола</h3>
-            <span class="advantages__number">— №2 —</span>
-            <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <li class="advantages__item advantages__item--background">
+            <h3 class="advantages__title advantages__title--accent">Там есть мост дьявола</h3>
+            <span class="advantages__number advantages__number--accent">— №2 —</span>
+            <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             <img class="advantages__image" src="../source/img/advantages-2.jpg" width="320" height="260"
               alt="Мост в Седоне.">
           </li>
@@ -108,37 +107,46 @@
     </section>
 
     <section class="search">
-      <h2 class="search__title">Заинтересовались?</h2>
-      <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+      <div class="search-wrapper">
+        <h2 class="search__title">Заинтересовались?</h2>
+        <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
         Седоне</p>
-      <a class="search__button" href="#">Найти гостиницу</a>
+        <a class="search__button" href="#">Найти гостиницу</a>
+      </div>
     </section>
   </main>
 
   <footer class="main-footer">
-    <h2 class="visually-hidden">Контакты</h2>
-    <span class="footer__tag">#visitSEDONA</span>
-    <ul class="footer__social-list">
-      <li class="footer__item">
-        <a class="footer__link" href="https://vk.com/htmlacademy">
-          <span class="visually-hidden">Вконтакте</span>
+    <div class="main-footer__wrapper">
+      <h2 class="visually-hidden">Контакты</h2>
+      <span class="main-footer__tag">#visitSEDONA</span>
+
+      <div class="main-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="main-footer__copyright copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="visually-hidden">HTML Academy</span>
         </a>
-      </li>
-      <li class="footer__item">
-        <a class="footer__link" href="https://t.me/htmlacademy">
-          <span class="visually-hidden">Телеграм</span>
-        </a>
-      </li>
-      <li class="footer__item">
-        <a class="footer__link" href="https://www.youtube.com/user/htmlacademyru">
-          <span class="visually-hidden">YouTube</span>
-        </a>
-      </li>
-    </ul>
-    <span class="footer__copyright">Разработано</span>
-    <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive">
-      <span class="visually-hidden">.html academy</span>
-    </a>
+      </div>
   </footer>
 </body>
 
