changed code formatting

--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,8 @@
 
     <div class="main-logo">
       <h2 class="visually-hidden">О Седоне</h2>
-      <img class="main-logo__image" src="../source/img/logo-welcome.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
+      <img class="main-logo__image" src="../source/img/logo-welcome.svg" width="282" height="214"
+        alt="Добро пожаловать в Седону.">
     </div>
 
     <section class="promo">
@@ -62,7 +63,8 @@
           <li class="advantages__item advantages__item--background">
             <h3 class="advantages__title advantages__title--accent">Настоящий городок</h3>
             <span class="advantages__number advantages__number--accent">— №1 —</span>
-            <p class="advantages__description advantages__description-accent">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <p class="advantages__description advantages__description-accent">Седона не аттракцион для туристов, там
+              течет своя жизнь</p>
             <img class="advantages__image" src="../source/img/advantages-1.jpg" width="320" height="260"
               alt="Улица в городке Седона.">
             <ul class="advantages__list advantages__list--background">
@@ -83,7 +85,8 @@
           <li class="advantages__item advantages__item--background">
             <h3 class="advantages__title advantages__title--accent">Там есть мост дьявола</h3>
             <span class="advantages__number advantages__number--accent">— №2 —</span>
-            <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы
+              осмелитесь, конечно</p>
             <img class="advantages__image" src="../source/img/advantages-2.jpg" width="320" height="260"
               alt="Мост в Седоне.">
           </li>
@@ -109,8 +112,9 @@
     <section class="search">
       <div class="search-wrapper">
         <h2 class="search__title">Заинтересовались?</h2>
-        <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
-        Седоне</p>
+        <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
+          в
+          Седоне</p>
         <a class="search__button" href="#">Найти гостиницу</a>
       </div>
     </section>
