--- a/source/form.html
+++ b/source/form.html
@@ -179,6 +179,22 @@
     </div>
   </footer>
 
+  <div class="modal-container modal-failure">
+    <section class="modal__content">
+      <h3 class="modal__title">Что-то пошло не так!</h3>
+      <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button class="modal__button">Ок</button>
+    </section>
+  </div>
+
+  <div class="modal-container modal-success">
+    <section class="modal__content">
+      <h3 class="modal__title">Ваш отзыв отправлен!</h3>
+      <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+      <button class="modal__button">Закрыть окно</button>
+    </section>
+  </div>
+
 </body>
 
 </html>
