--- a/source/form.html
+++ b/source/form.html
@@ -190,7 +190,8 @@
   <div class="modal-container modal-success">
     <section class="modal__content">
       <h3 class="modal__title">Ваш отзыв отправлен!</h3>
-      <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+      <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его
+        на сайте.</p>
       <button class="modal__button">Закрыть окно</button>
     </section>
   </div>
