--- a/source/form.html
+++ b/source/form.html
@@ -148,7 +148,7 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper">
       <h2 class="visually-hidden">Контакты</h2>
-      <span class="main-footer__tag">#visitSEDONA</span>
+      <a class="main-footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
 
       <div class="main-footer__social social">
         <ul class="social__list">
