--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Седона: отзывы</title>
+  <title>Седона: галерея фото и видео</title>
 </head>
 
-<body class="form__body">
+<body class="catalog__body">
   <header class="main-header">
     <a class="main-header__logo">
       <img class="main-header__logo-image" src="../source/img/logo.svg" width="195" height="96" alt="Городок Седона.">
@@ -20,13 +20,13 @@
               Главная
             </a>
           </li>
-          <li class="main-nav__item">
-            <a href="catalog.html">
+          <li class="main-nav__item main-nav__item--current">
+            <a>
               Фото и видео
             </a>
           </li>
-          <li class="main-nav__item main-nav__item--current">
-            <a>
+          <li class="main-nav__item">
+            <a href="form.html">
               Форма отзыва
             </a>
           </li>
@@ -39,5 +39,109 @@
       </div>
     </nav>
   </header>
+
+  <main class="main-container">
+    <h1 class="visually-hidden">Галерея</h1>
+
+    <div class="form-logo">
+      <h2 class="visually-hidden">Городок Седона</h2>
+      <img class="form-logo__image" src="../source/img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
+    </div>
+
+    <section class="catalog">
+      <h2 class="catalog__title">Фото и видео</h2>
+      <p class="catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+
+      <ul class="catalog__list">
+        <li class="catalog__card">
+          <a class="catalog__link" href="#">
+            <img class="" src="" width="" height="" alt="Пейзаж дороги в Седону.">
+          </a>
+          <h3 class="catalog__card-title">
+            <a class="catalog__link" href="#">Неродные просторы</a>
+          </h3>
+          <span class="catalog__author">Автор фото: Борис</span>
+          <span class="catalog__card-like"></span>
+          <span class="catalog__number-like">1350</span>
+        </li>
+
+        <li class="catalog__card">
+          <a class="catalog__link" href="#">
+            <img class="" src="" width="" height="" alt="Растения в окрестностях Седоны.">
+          </a>
+          <h3 class="catalog__card-title">
+            <a class="catalog__link" href="#">Местная растительность</a>
+          </h3>
+          <span class="catalog__author">Автор фото: Сергей</span>
+          <span class="catalog__card-like"></span>
+          <span class="catalog__number-like">143</span>
+        </li>
+
+        <li class="catalog__card">
+          <a class="catalog__link" href="#">
+            <img class="" src="" width="" height="" alt="Горный серпантин.">
+          </a>
+          <h3 class="catalog__card-title">
+            <a class="catalog__link" href="#">Дорога на север</a>
+          </h3>
+          <span class="catalog__author">Автор фото: Петр</span>
+          <span class="catalog__card-like"></span>
+          <span class="catalog__number-like">96</span>
+        </li>
+
+        <li class="catalog__card">
+          <a class="catalog__link" href="#">
+            <img class="" src="" width="" height="" alt="Вид на горы Седоны.">
+          </a>
+          <h3 class="catalog__card-title">
+            <a class="catalog__link" href="#">Мост Дьявола</a>
+          </h3>
+          <span class="catalog__author">Автор фото: Антон</span>
+          <span class="catalog__card-like"></span>
+          <span class="catalog__number-like">254</span>
+        </li>
+      </ul>
+    </section>
+
+    <section class="catalog-video">
+      <h2 class="catalog__title">Все еще сомневаетесь?</h2>
+      <p class="catalog__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+      <video class="catalog__video" src=""></video>
+    </section>
+  </main>
+
+  <footer class="main-footer">
+    <div class="main-footer__wrapper">
+      <h2 class="visually-hidden">Контакты</h2>
+      <a class="main-footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
+
+      <div class="main-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="main-footer__copyright copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="visually-hidden">HTML Academy</span>
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
