refactor: change images

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,12 +50,14 @@
 
     <section class="catalog">
       <h2 class="catalog__title">Фото и видео</h2>
-      <p class="catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+      <p class="catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
+        политике и экономике.</p>
 
       <ul class="catalog__list">
         <li class="catalog__card">
           <a class="catalog__link" href="#">
-            <img class="" src="" width="" height="" alt="Пейзаж дороги в Седону.">
+            <img class="catalog__image" src="../source/img/catalog-1.jpg" width="280" height="280"
+              alt="Пейзаж дороги в Седону.">
           </a>
           <h3 class="catalog__card-title">
             <a class="catalog__link" href="#">Неродные просторы</a>
@@ -67,7 +69,8 @@
 
         <li class="catalog__card">
           <a class="catalog__link" href="#">
-            <img class="" src="" width="" height="" alt="Растения в окрестностях Седоны.">
+            <img class="catalog__image" src="../source/img/catalog-2.jpg" width="280" height="280"
+              alt="Растения в окрестностях Седоны.">
           </a>
           <h3 class="catalog__card-title">
             <a class="catalog__link" href="#">Местная растительность</a>
@@ -79,7 +82,8 @@
 
         <li class="catalog__card">
           <a class="catalog__link" href="#">
-            <img class="" src="" width="" height="" alt="Горный серпантин.">
+            <img class="catalog__image" src="../source/img/catalog-3.jpg" width="280" height="280"
+              alt="Горный серпантин.">
           </a>
           <h3 class="catalog__card-title">
             <a class="catalog__link" href="#">Дорога на север</a>
@@ -91,7 +95,8 @@
 
         <li class="catalog__card">
           <a class="catalog__link" href="#">
-            <img class="" src="" width="" height="" alt="Вид на горы Седоны.">
+            <img class="catalog__image" src="../source/img/catalog-4.jpg" width="280" height="280"
+              alt="Вид на горы Седоны.">
           </a>
           <h3 class="catalog__card-title">
             <a class="catalog__link" href="#">Мост Дьявола</a>
@@ -105,8 +110,9 @@
 
     <section class="catalog-video">
       <h2 class="catalog__title">Все еще сомневаетесь?</h2>
-      <p class="catalog__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-      <video class="catalog__video" src=""></video>
+      <p class="catalog__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной
+        раз!</p>
+      <video class="catalog__video" src="#"></video>
     </section>
   </main>
 
@@ -144,4 +150,5 @@
     </div>
   </footer>
 </body>
+
 </html>
