--- a/source/index.html
+++ b/source/index.html
@@ -116,6 +116,7 @@
           в
           Седоне</p>
         <a class="search__button" href="#">Найти гостиницу</a>
+        <div class="search__map"></div>
       </div>
     </section>
   </main>
