fix: paths for pictures

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
 <body class="catalog__body">
   <header class="main-header">
     <a class="main-header__logo">
-      <img class="main-header__logo-image" src="../source/img/logo.svg" width="195" height="96" alt="Городок Седона.">
+      <img class="main-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -45,7 +45,7 @@
 
     <div class="form-logo">
       <h2 class="visually-hidden">Городок Седона</h2>
-      <img class="form-logo__image" src="../source/img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
+      <img class="form-logo__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
     </div>
 
     <section class="catalog">
@@ -56,7 +56,7 @@
       <ul class="catalog__list">
         <li class="catalog__card">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="../source/img/catalog-1.jpg" width="280" height="280"
+            <img class="catalog__image" src="./img/catalog-1.jpg" width="280" height="280"
               alt="Пейзаж дороги в Седону.">
           </a>
           <h3 class="catalog__card-title">
@@ -69,7 +69,7 @@
 
         <li class="catalog__card">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="../source/img/catalog-2.jpg" width="280" height="280"
+            <img class="catalog__image" src="./img/catalog-2.jpg" width="280" height="280"
               alt="Растения в окрестностях Седоны.">
           </a>
           <h3 class="catalog__card-title">
@@ -82,7 +82,7 @@
 
         <li class="catalog__card">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="../source/img/catalog-3.jpg" width="280" height="280"
+            <img class="catalog__image" src="./img/catalog-3.jpg" width="280" height="280"
               alt="Горный серпантин.">
           </a>
           <h3 class="catalog__card-title">
@@ -95,7 +95,7 @@
 
         <li class="catalog__card">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="../source/img/catalog-4.jpg" width="280" height="280"
+            <img class="catalog__image" src="./img/catalog-4.jpg" width="280" height="280"
               alt="Вид на горы Седоны.">
           </a>
           <h3 class="catalog__card-title">
