--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
 <body class="form__body">
   <header class="main-header">
     <a class="main-header__logo">
-      <img class="main-header__logo-image" src="../source/img/logo.svg" width="195" height="96" alt="Городок Седона.">
+      <img class="main-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -45,7 +45,7 @@
 
     <div class="form-logo">
       <h2 class="visually-hidden">Городок Седона</h2>
-      <img class="form-logo__image" src="../source/img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
+      <img class="form-logo__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
     </div>
 
     <section class="review">
