--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 <body class="page__body">
   <header class="main-header">
     <a class="main-header__logo">
-      <img class="main-header__logo-image" src="../source/img/logo.svg" width="195" height="96" alt="Городок Седона.">
+      <img class="main-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -45,7 +45,7 @@
 
     <div class="main-logo">
       <h2 class="visually-hidden">О Седоне</h2>
-      <img class="main-logo__image" src="../source/img/logo-welcome.svg" width="282" height="214"
+      <img class="main-logo__image" src="./img/logo-welcome.svg" width="282" height="214"
         alt="Добро пожаловать в Седону.">
     </div>
 
@@ -65,7 +65,7 @@
             <span class="advantages__number advantages__number--accent">— №1 —</span>
             <p class="advantages__description advantages__description-accent">Седона не аттракцион для туристов, там
               течет своя жизнь</p>
-            <img class="advantages__image" src="../source/img/advantages-1.jpg" width="320" height="260"
+            <img class="advantages__image" src="./img/advantages-1.jpg" width="320" height="260"
               alt="Улица в городке Седона.">
             <ul class="advantages__list advantages__list--background">
               <li class="advantages__item advantages__item--house">
@@ -87,7 +87,7 @@
             <span class="advantages__number advantages__number--accent">— №2 —</span>
             <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы
               осмелитесь, конечно</p>
-            <img class="advantages__image" src="../source/img/advantages-2.jpg" width="320" height="260"
+            <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260"
               alt="Мост в Седоне.">
           </li>
           <li class="advantages__item">
