--- a/source/index.html
+++ b/source/index.html
@@ -49,15 +49,12 @@
         alt="Добро пожаловать в Седону.">
     </div>
 
-    <section class="promo">
-      <div class="promo__wrapper">
-        <h2 class="promo__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="promo__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-      </div>
+    <section class="section-content">
+        <h2 class="section-content__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="section-content__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
 
     <section class="advantages">
-      <div class="advantages__wrapper">
         <h2 class="visually-hidden">Преимущества</h2>
         <ol class="advantages__list">
           <li class="advantages__item advantages__item--background">
@@ -106,18 +103,15 @@
             <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
-      </div>
     </section>
 
-    <section class="search">
-      <div class="search-wrapper">
-        <h2 class="search__title">Заинтересовались?</h2>
-        <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
+    <section class="section-content">
+        <h2 class="section-content__title">Заинтересовались?</h2>
+        <p class="section-content__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
           в
           Седоне</p>
-        <a class="search__button" href="#">Найти гостиницу</a>
+        <a class="button" href="#">Найти гостиницу</a>
         <div class="search__map"></div>
-      </div>
     </section>
   </main>
 
