--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="form" lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>Седона: галерея фото и видео</title>
 </head>
 
-<body class="catalog__body">
+<body class="page__body">
   <header class="main-header">
     <a class="main-header__logo">
       <img class="main-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
@@ -48,9 +48,9 @@
       <img class="form-logo__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
     </div>
 
-    <section class="catalog">
-      <h2 class="catalog__title">Фото и видео</h2>
-      <p class="catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
+    <section class="section-content">
+      <h2 class="section-content__title">Фото и видео</h2>
+      <p class="section-content__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
         политике и экономике.</p>
 
       <ul class="catalog__list">
@@ -108,11 +108,11 @@
       </ul>
     </section>
 
-    <section class="catalog-video">
-      <h2 class="catalog__title">Все еще сомневаетесь?</h2>
-      <p class="catalog__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной
+    <section class="section-content">
+      <h2 class="section-content__title">Все еще сомневаетесь?</h2>
+      <p class="section-content__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной
         раз!</p>
-      <video class="catalog__video" src="#"></video>
+      <video class="section-content__video" src="#"></video>
     </section>
   </main>
 
