--- a/source/index.html
+++ b/source/index.html
@@ -7,13 +7,13 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
-    <a class="main-header__logo">
-      <img class="main-header__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
+  <div class="page__container">
+  <header class="page__header">
+    <a class="page__logo">
+      <img class="page__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current">
             <a>
@@ -36,11 +36,10 @@
             </a>
           </li>
         </ul>
-      </div>
     </nav>
   </header>
 
-  <main class="main-container">
+  <main class="page__main">
     <h1 class="visually-hidden">Городок Седона</h1>
 
     <div class="main-logo">
@@ -111,16 +110,15 @@
           в
           Седоне</p>
         <a class="button" href="#">Найти гостиницу</a>
-        <div class="search__map"></div>
+        <div class="section-content__map"></div>
     </section>
   </main>
 
-  <footer class="main-footer">
-    <div class="main-footer__wrapper">
+  <footer class="page__footer footer">
       <h2 class="visually-hidden">Контакты</h2>
-      <a class="main-footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
+      <a class="footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
 
-      <div class="main-footer__social social">
+      <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -140,7 +138,7 @@
         </ul>
       </div>
 
-      <div class="main-footer__copyright copyright">
+      <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">HTML Academy</span>
@@ -148,6 +146,7 @@
       </div>
     </div>
   </footer>
+  </div>
 </body>
 
 </html>
