--- a/source/index.html
+++ b/source/index.html
@@ -8,12 +8,12 @@
 
 <body class="page__body">
   <div class="page__container">
-  <header class="page__header">
-    <a class="page__logo">
-      <img class="page__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+    <header class="page__header">
+      <a class="page__logo">
+        <img class="page__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current">
             <a>
@@ -36,24 +36,24 @@
             </a>
           </li>
         </ul>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <main class="page__main">
-    <h1 class="visually-hidden">Городок Седона</h1>
+    <main class="page__main">
+      <h1 class="visually-hidden">Городок Седона</h1>
 
-    <div class="main-logo">
-      <h2 class="visually-hidden">О Седоне</h2>
-      <img class="main-logo__image" src="./img/logo-welcome.svg" width="282" height="214"
-        alt="Добро пожаловать в Седону.">
-    </div>
+      <div class="main-logo">
+        <h2 class="visually-hidden">О Седоне</h2>
+        <img class="main-logo__image" src="./img/logo-welcome.svg" width="282" height="214"
+          alt="Добро пожаловать в Седону.">
+      </div>
 
-    <section class="section-content">
+      <section class="section-content">
         <h2 class="section-content__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="section-content__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-    </section>
+      </section>
 
-    <section class="advantages">
+      <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ol class="advantages__list">
           <li class="advantages__item advantages__item--background">
@@ -83,8 +83,7 @@
             <span class="advantages__number advantages__number--accent">— №2 —</span>
             <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы
               осмелитесь, конечно</p>
-            <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260"
-              alt="Мост в Седоне.">
+            <img class="advantages__image" src="./img/advantages-2.jpg" width="320" height="260" alt="Мост в Седоне.">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Небольшая площадь</h3>
@@ -102,19 +101,20 @@
             <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
-    </section>
+      </section>
 
-    <section class="section-content">
+      <section class="section-content">
         <h2 class="section-content__title">Заинтересовались?</h2>
-        <p class="section-content__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
+        <p class="section-content__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+          гостиниц
           в
           Седоне</p>
         <a class="button" href="#">Найти гостиницу</a>
         <div class="section-content__map"></div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="page__footer footer">
+    <footer class="page__footer footer">
       <h2 class="visually-hidden">Контакты</h2>
       <a class="footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
 
@@ -144,8 +144,7 @@
           <span class="visually-hidden">HTML Academy</span>
         </a>
       </div>
-    </div>
-  </footer>
+    </footer>
   </div>
 </body>
 
