--- a/source/form.html
+++ b/source/form.html
@@ -186,7 +186,7 @@
         <h3 class="section-content__title">Что-то пошло не так!</h3>
         <p class="section-content__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
         </p>
-        <button class="button">Ок</button>
+        <button class="button modal__button">Ок</button>
       </section>
     </div>
 
@@ -198,7 +198,7 @@
           на сайте.</p>
       </section>
       <div class="modal__button-wrapper">
-        <button class="modal__button">Закрыть окно</button>
+        <button class="button modal__button">Закрыть окно</button>
       </div>
     </div>
   </div>
