fix: code in logo

--- a/source/form.html
+++ b/source/form.html
@@ -44,9 +44,9 @@
     <main class="page__main">
       <h1 class="visually-hidden">Отзывы о Седоне</h1>
 
-      <div class="form-logo">
+      <div class="page__preview preview">
         <h2 class="visually-hidden">Городок Седона</h2>
-        <img class="form-logo__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
+        <img class="preview__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
       </div>
 
       <section class="section-content">
