--- a/source/index.html
+++ b/source/index.html
@@ -42,9 +42,9 @@
     <main class="page__main">
       <h1 class="visually-hidden">Городок Седона</h1>
 
-      <div class="main-logo">
+      <div class="page__preview preview">
         <h2 class="visually-hidden">О Седоне</h2>
-        <img class="main-logo__image" src="./img/logo-welcome.svg" width="282" height="214"
+        <img class="preview__image--welcome" src="./img/logo-welcome.svg" width="282" height="214"
           alt="Добро пожаловать в Седону.">
       </div>
 
