--- a/2/catalog.html
+++ b/2/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="form" lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -7,14 +7,14 @@
   <base href="https://htmlacademy-adaptive.github.io/2121153-sedona-26/2/">
 </head>
 
-<body class="catalog__body">
-  <header class="main-header">
-    <a class="main-header__logo">
-      <img class="main-header__logo-image" src="../source/img/logo.svg" width="195" height="96" alt="Городок Седона.">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
+<body class="page__body">
+  <div class="page__container">
+    <header class="page__header">
+      <a class="page__logo">
+        <img class="page__logo-image" src="./img/logo.svg" width="195" height="96" alt="Городок Седона.">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a href="index.html">
@@ -37,92 +37,92 @@
             </a>
           </li>
         </ul>
+      </nav>
+    </header>
+
+    <main class="page__main">
+      <h1 class="visually-hidden">Галерея</h1>
+
+      <div class="page__preview preview">
+        <h2 class="visually-hidden">Городок Седона</h2>
+        <img class="preview__image" src="./img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
       </div>
-    </nav>
-  </header>
 
-  <main class="main-container">
-    <h1 class="visually-hidden">Галерея</h1>
+      <section class="section-content">
+        <h2 class="section-content__title">Фото и видео</h2>
+        <p class="section-content__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
+          забыть о
+          политике и экономике.</p>
+      </section>
 
-    <div class="form-logo">
-      <h2 class="visually-hidden">Городок Седона</h2>
-      <img class="form-logo__image" src="../source/img/logo-sedona.svg" width="229" height="39" alt="Логотип Седоны.">
-    </div>
+      <section class="catalog">
+        <ul class="catalog__list">
+          <li class="catalog__card">
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="./img/catalog-1.jpg" width="280" height="280"
+                alt="Пейзаж дороги в Седону.">
+            </a>
+            <h3 class="catalog__card-title">
+              <a class="catalog__link" href="#">Неродные просторы</a>
+            </h3>
+            <span class="catalog__author">Автор фото: Борис</span>
+            <span class="catalog__card-like"></span>
+            <span class="catalog__number-like">1350</span>
+          </li>
 
-    <section class="catalog">
-      <h2 class="catalog__title">Фото и видео</h2>
-      <p class="catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
-        политике и экономике.</p>
+          <li class="catalog__card">
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="./img/catalog-2.jpg" width="280" height="280"
+                alt="Растения в окрестностях Седоны.">
+            </a>
+            <h3 class="catalog__card-title">
+              <a class="catalog__link" href="#">Местная растительность</a>
+            </h3>
+            <span class="catalog__author">Автор фото: Сергей</span>
+            <span class="catalog__card-like"></span>
+            <span class="catalog__number-like">143</span>
+          </li>
 
-      <ul class="catalog__list">
-        <li class="catalog__card">
-          <a class="catalog__link" href="#">
-            <img class="catalog__image" src="../source/img/catalog-1.jpg" width="280" height="280"
-              alt="Пейзаж дороги в Седону.">
-          </a>
-          <h3 class="catalog__card-title">
-            <a class="catalog__link" href="#">Неродные просторы</a>
-          </h3>
-          <span class="catalog__author">Автор фото: Борис</span>
-          <span class="catalog__card-like"></span>
-          <span class="catalog__number-like">1350</span>
-        </li>
+          <li class="catalog__card">
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="./img/catalog-3.jpg" width="280" height="280" alt="Горный серпантин.">
+            </a>
+            <h3 class="catalog__card-title">
+              <a class="catalog__link" href="#">Дорога на север</a>
+            </h3>
+            <span class="catalog__author">Автор фото: Петр</span>
+            <span class="catalog__card-like"></span>
+            <span class="catalog__number-like">96</span>
+          </li>
 
-        <li class="catalog__card">
-          <a class="catalog__link" href="#">
-            <img class="catalog__image" src="../source/img/catalog-2.jpg" width="280" height="280"
-              alt="Растения в окрестностях Седоны.">
-          </a>
-          <h3 class="catalog__card-title">
-            <a class="catalog__link" href="#">Местная растительность</a>
-          </h3>
-          <span class="catalog__author">Автор фото: Сергей</span>
-          <span class="catalog__card-like"></span>
-          <span class="catalog__number-like">143</span>
-        </li>
+          <li class="catalog__card">
+            <a class="catalog__link" href="#">
+              <img class="catalog__image" src="./img/catalog-4.jpg" width="280" height="280" alt="Вид на горы Седоны.">
+            </a>
+            <h3 class="catalog__card-title">
+              <a class="catalog__link" href="#">Мост Дьявола</a>
+            </h3>
+            <span class="catalog__author">Автор фото: Антон</span>
+            <span class="catalog__card-like"></span>
+            <span class="catalog__number-like">254</span>
+          </li>
+        </ul>
+      </section>
 
-        <li class="catalog__card">
-          <a class="catalog__link" href="#">
-            <img class="catalog__image" src="../source/img/catalog-3.jpg" width="280" height="280"
-              alt="Горный серпантин.">
-          </a>
-          <h3 class="catalog__card-title">
-            <a class="catalog__link" href="#">Дорога на север</a>
-          </h3>
-          <span class="catalog__author">Автор фото: Петр</span>
-          <span class="catalog__card-like"></span>
-          <span class="catalog__number-like">96</span>
-        </li>
+      <section class="section-content">
+        <h2 class="section-content__title">Все еще сомневаетесь?</h2>
+        <p class="section-content__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+          очередной
+          раз!</p>
+        <video class="section-content__video" src="#"></video>
+      </section>
+    </main>
 
-        <li class="catalog__card">
-          <a class="catalog__link" href="#">
-            <img class="catalog__image" src="../source/img/catalog-4.jpg" width="280" height="280"
-              alt="Вид на горы Седоны.">
-          </a>
-          <h3 class="catalog__card-title">
-            <a class="catalog__link" href="#">Мост Дьявола</a>
-          </h3>
-          <span class="catalog__author">Автор фото: Антон</span>
-          <span class="catalog__card-like"></span>
-          <span class="catalog__number-like">254</span>
-        </li>
-      </ul>
-    </section>
-
-    <section class="catalog-video">
-      <h2 class="catalog__title">Все еще сомневаетесь?</h2>
-      <p class="catalog__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной
-        раз!</p>
-      <video class="catalog__video" src="#"></video>
-    </section>
-  </main>
-
-  <footer class="main-footer">
-    <div class="main-footer__wrapper">
+    <footer class="page__footer footer">
       <h2 class="visually-hidden">Контакты</h2>
-      <a class="main-footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
+      <a class="footer__tag" href="https://twitter.com/hashtag/visitsedona">#visitSEDONA</a>
 
-      <div class="main-footer__social social">
+      <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -142,14 +142,14 @@
         </ul>
       </div>
 
-      <div class="main-footer__copyright copyright">
+      <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">HTML Academy</span>
         </a>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
 </body>
 
 </html>
